--- a/index.html
+++ b/index.html
@@ -4,170 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Local Flavors</title>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #fffaf4;
-      color: #333;
-    }
-
-    header {
-      background-color: #ff7043;
-      color: white;
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-
-    header p {
-      font-size: 1.2rem;
-      margin-top: 0.5rem;
-    }
-
-    nav {
-      background: #ff5722;
-      padding: 0.75rem 1rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-
-    nav a {
-      color: white;
-      margin: 0.5rem;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    nav input[type="text"] {
-      padding: 0.5rem;
-      border-radius: 5px;
-      border: none;
-      width: 200px;
-    }
-
-    main {
-      padding: 2rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .section-title {
-      margin: 2rem 0 1rem;
-      color: #d84315;
-      font-size: 1.8rem;
-    }
-
-    .place-section {
-      margin-bottom: 3rem;
-    }
-
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1.5rem;
-    }
-
-    .card {
-      background: white;
-      padding: 1.5rem;
-      border-radius: 1rem;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      transition: transform 0.2s ease;
-    }
-
-    .card:hover {
-      transform: translateY(-5px);
-    }
-
-    .card h3 {
-      margin-top: 0;
-      color: #d84315;
-    }
-
-    .card small {
-      display: block;
-      font-size: 0.85rem;
-      color: #666;
-      margin-bottom: 0.5rem;
-    }
-
-    .card p {
-      margin-bottom: 1rem;
-    }
-
-    .card button {
-      padding: 0.5rem 1rem;
-      background: #ff7043;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .card button:hover {
-      background: #e64a19;
-    }
-
-    .map-container {
-      margin-top: 3rem;
-    }
-
-    .map-container h2 {
-      color: #d84315;
-      margin-bottom: 1rem;
-    }
-
-    iframe {
-      width: 100%;
-      height: 350px;
-      border: none;
-      border-radius: 0.5rem;
-    }
-
-    footer {
-      margin-top: 3rem;
-      text-align: center;
-      padding: 1rem;
-      background: #e64a19;
-      font-size: 0.9rem;
-      color: white;
-    }
-
-    @media (max-width: 600px) {
-      nav {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav input {
-        width: 100%;
-        margin-top: 0.5rem;
-      }
-    }
-    .rating {
-  margin-bottom: 1rem;
-  color: gold;
-  font-size: 1.1rem;
-  font-weight: bold;
-}
-.rating span {
-  color: #555;
-  font-size: 0.9rem;
-  margin-left: 0.25rem;
-}
-
-  </style>
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -306,28 +143,7 @@
     &copy; 2025 Local Flavors • Built with taste and tradition 🍴
   </footer>
 
-  <script>
-    const searchInput = document.getElementById("searchInput");
-    const cards = document.querySelectorAll(".card");
 
-    searchInput.addEventListener("input", () => {
-      const query = searchInput.value.toLowerCase();
-      cards.forEach(card => {
-        const text = card.innerText.toLowerCase();
-        card.style.display = text.includes(query) ? "block" : "none";
-      });
-    });
-    <script>
-function generateStars(rating) {
-  const fullStars = Math.floor(rating);
-  const halfStar = rating % 1 >= 0.5;
-  let stars = "★".repeat(fullStars);
-  if (halfStar) stars += "½";
-  stars = stars.padEnd(5, "☆");
-  return `<span style="color: gold;">${stars}</span> <span>(${rating})</span>`;
-}
-</script>
-
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
