--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@400;700&display=swap" rel="stylesheet">
-</head>
   <script defer src="script.js"></script>
 </head>
 <body>
-  <header style="display: flex; align-items: center; gap: 20px;">
-  <img src="lf.png" alt="Flavor Finder Logo" style="height: 170px;">
-  <div>
-    
-    <h1>Flavor Finder</h1>
-    <p>Your map to regional flavor — curated, clickable, craveable!</p>
+  <header style="display: flex; align-items: center; gap: 20px; padding: 10px;">
+    <img src="lf.png" alt="Flavor Finder Logo" style="height: 150px;">
+    <div>
+      <h1>Flavor Finder</h1>
+      <p>Your map to regional flavor — curated, clickable, craveable!</p>
+    </div>
   </header>
 
   <nav>
     <div>
-      <a href="#andhra">Andhra Pradesh</a>
+      <a href="#andhrapradesh">Andhra Pradesh</a>
       <a href="#telangana">Telangana</a>
       <a href="#tamilnadu">Tamil Nadu</a>
       <a href="#kerala">Kerala</a>
@@ -30,20 +29,29 @@
     <button onclick="toggleTheme()">🌓 Toggle Theme</button>
   </nav>
 
+
   <main id="mainContent"></main>
+
   <!-- Map Section -->
-    <div class="map-container">
-      <h2>📍 Sample Food Spot</h2>
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3783.0717794973933!2d78.46783817516391!3d17.40641798336133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb973dc3617b39%3A0x8e2eb0b46aa9c6fa!2sParadise%20Biryani!5e0!3m2!1sen!2sin!4v1681200000000"
-        allowfullscreen=""
-        loading="lazy"
-      ></iframe>
-    </div>
-  </main>
+  <div class="map-container">
+    <h2>📍 Sample Food Spot</h2>
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3783.0717794973933!2d78.46783817516391!3d17.40641798336133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb973dc3617b39%3A0x8e2eb0b46aa9c6fa!2sParadise%20Biryani!5e0!3m2!1sen!2sin!4v1681200000000"
+      allowfullscreen=""
+      loading="lazy"
+    ></iframe>
+  </div>
 
   <footer>
     &copy; 2025 Flavor Finder | Explore the taste of the South 🌶️
   </footer>
+
+  <!-- Floating Recipe Modal -->
+  <div id="recipeModal" class="modal" style="display:none;">
+      <div class="rating" id="modalRating"></div>
+      <center></center>
+    </div>
+  </div>
+  
 </body>
 </html>
